# apol-lo

./: README.md  render.yaml  start-backend.sh  start-frontend.sh
back/: pyproject.toml  render.yaml  retrain_with_feedback.py
back/data/: Pos_Neut_Neg.csv
back/mlmodel/: Model.joblib
back/src/apollo_backend/: config.py  database.py
back/src/apollo_backend/database/: __init__.py  session.py
back/src/apollo_backend/ml/: modelLoader.py  preprocess.py
back/src/apollo_backend/services/: analyzeService.py  feedbackService.py  moodEntryService.py
back/src/apollo_backend/utils/: jwtHandler.py
backend/: README.md  pyproject.toml  requirements.txt  train_model.py
backend/src/apollo_backend/: main.py  sentiment.py
backend/src/apollo_backend/api/: deps.py
backend/src/apollo_backend/api/routers/: analyzeRoutes.py  authRoutes.py  userRoutes.py
backend/src/apollo_backend/common/: apiResponse.py
backend/src/apollo_backend/database/: dbInitializer.py  engine.py
backend/src/apollo_backend/ml/: modelLoader.py
backend/src/apollo_backend/models/dao/: feedbackDAO.py  moodEntryDAO.py  userDAO.py
backend/src/apollo_backend/models/dto/: feedbackDTO.py  userDTO.py
backend/src/apollo_backend/models/entities/: moodEntryEntity.py
backend/src/apollo_backend/services/: authService.py  userService.py
backend/src/apollo_backend/utils/: security.py
docs/: API.md  ARQUITECTURA.md  DIAGRAMES.md  DISSENY_UI.md  INSTALLACIO.md  MODEL_DADES.md
frontend/: index.html
frontend/src/api/: analyze.js  auth.js  config.js  entries.js  feedback.js
(+6 files in other folders)
